VIS-18 fixed, added different effects for warnings (not so visible) and errors (highly visible). Also added bindings to enable close-on-document-click

--- a/web-app/css/visualization.css
+++ b/web-app/css/visualization.css
@@ -47,10 +47,16 @@ table.jqplot-table-legend { width: 100px; }
     cursor:pointer;
 }
 
-div#message_counter.message_newmessage {
+div#message_counter.message_warningnew {
+    width: 50px;
+    height: 50px;
+    background-color: #eee;
+}
+
+div#message_counter.message_errornew {
     width: 150px;
     height: 150px;
-    background-color: pink;
+    background-color: #ffe0e0;
 }
 
 /** START :: VISUALIZATION MENU **/
